@@ -3,5 +3,5 @@ Make Stack more flexible, it's a fixed-length array.
 AI stuff
   Warships should hunt origins of torpedoes
 
-Add thermal layer?
+Add thermal indicators to interface
 
